<resources>
    <string name="app_name">Facebook</string>
    <string name="usernameOrEmail">Username or Email address</string>
    <string name="password">Password</string>
    <string name="loginBtn">Log in</string>
    <string name="forgotPassword">Forgotten your password ?</string>
    <string name="loginHelp">Click here</string>
    <string name="or">OR</string>
    <string name="newAccount">Create new account</string>
    <!--    image description -->
    <string name="facebookImage">Facebook Image</string>

    <!-- activity_register -->
    <string name="input_name">Full Name</string>
    <string name="input_email">Email Address</string>
    <string name="input_phone">Phone Number</string>
    <string name="input_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="input_dob">Date of Birth</string>
    <string name="registerAlready">Already have Account ?  </string>
    <string name="registerAlreadyClick">Login</string>

    <!-- activity_forgot_password -->
    <string name="forgotpass">Forgot Password</string>
    <string name="forgot_heading">Please enter the required details to retrieve your account.</string>
    <string name="forgot_next">Next</string>

    <!-- activity_forgot_password_otp -->
    <string name="forgot_otp_heading">Enter the otp that was sent on your registered mobile number ending with XXXXXXX123</string>
    <string name="forgot_6_digit">Enter 6 digit number</string>


</resources>