<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        android:textSize="28sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/text_black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_otp_heading"
        android:textSize="18sp"
        android:layout_margin="20sp"
        android:textColor="@color/text_black"
        />

    <EditText
        android:id="@+id/forgot_otp_input_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="10sp"
        android:background="@drawable/edittext_fields"
        android:hint="@string/forgot_6_digit"
        android:autofillHints="false"
        android:textColorHint="@color/light_black"
        />

    <Button
        android:id="@+id/forgotPassword_otp_next_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_next"
        android:layout_margin="20sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />
</LinearLayout>