<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
<!-- facebook logo -->
        <ImageView
            android:id="@+id/logo_image_id"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebookImage"
            android:layout_marginTop="40sp"
            />

<!-- login section -->
<!-- phone or email -->
        <EditText
            android:id="@+id/username_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/usernameOrEmail"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:background="@drawable/edittext_fields"
            android:layout_margin="20sp"
            android:padding="15sp"
            android:autofillHints="false"
            />
    <!-- password -->
        <EditText
            android:id="@+id/password_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:background="@drawable/edittext_fields"
            android:inputType="textPassword"
            android:layout_margin="20sp"
            android:padding="15sp"
            android:autofillHints="false"
            />
    <!-- login button -->
    <Button
        android:id="@+id/login_btn_id"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:background="@drawable/login_btn"
        android:textSize="15sp"
        />

<!-- help -->
    <LinearLayout
        android:id="@+id/forgotPassword_container_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"

        >
        <TextView
            android:id="@+id/forgotPassword_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/clickHere_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHelp"
            android:textColor="@color/blue_shade"
            />
    </LinearLayout>

<!-- OR -->
    <LinearLayout
        android:id="@+id/or_container_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        >
        <View
            android:id="@+id/beforeOr_view_id"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@drawable/or_files"
            android:layout_marginTop="15sp"
            />

        <TextView
            android:id="@+id/or_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black"
            android:layout_margin="5sp"
            />


        <View
            android:id="@+id/afterOr_text_id"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@drawable/or_files"
            android:layout_marginTop="15sp"
            />
    </LinearLayout>
    
<!-- create new account -->
    <Button
        android:id="@+id/createAccount_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="50sp"
        android:text="@string/newAccount"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="monospace"
        android:background="@drawable/create_new_account_btn"
        />

</LinearLayout>
