<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_heading"
            android:textSize="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            />

        <TextView
            android:id="@+id/email_text_id"
            android:labelFor="@+id/forgot_email_input_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            android:layout_marginStart="10sp"

            />

        <EditText
            android:id="@+id/forgot_email_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_fields"
            android:inputType="textEmailAddress"
            android:autofillHints="false"
            android:layout_marginTop="15sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_next"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            />

    </LinearLayout>

</ScrollView>
